apps/base/nullclaw/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nullclaw
  namespace: nullclaw
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: nullclaw
  type: ClusterIP
